# dx-rpg

./: .env  .env_template  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  build.rs  db.sqlite  docker-compose.yml  package-lock.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bundle_to_asset.yml  docker.yml  publish_docker.yml  test.yml
android/: debug.keystore
assets/: dx-components-theme.css  main.css  tailwind.css
assets/offlines/characters/: Elara la guerisseuse de la Lorien.json
bundle/offlines/games/: ongoing-games.json
bundle/public/: index.html
bundle/public/assets/: dx-components-theme-dxh545eb3c93b542c3.css  dx-rpg-dxh296bf46133d382f8.js  dx-rpg-dxh298b3fc4cc2ee84.js  dx-rpg-dxh5588b9e640971b1f.js  dx-rpg-dxh5764f78a6bcee1f4.js  dx-rpg-dxh7fc2fcb545c1a0.js  dx-rpg-dxhbe5bc559b6d26b60.js  dx-rpg-dxhf9bcdc5dc7873069.js  dx-rpg_bg-dxh91dae2b925f31e3f.wasm  dx-rpg_bg-dxh9c7d57dd5d9e4593.wasm  dx-rpg_bg-dxhb9d8a9eb2d177543.wasm  dx-rpg_bg-dxhbf3dc75d15fbece6.wasm  dx-rpg_bg-dxhd3602f6e4679c82a.wasm  dx-rpg_bg-dxhd9b13f03995d25f.wasm  dx-rpg_bg-dxhe6f576dc2a3877c0.wasm  main-dxh8fef594d5a7763f.css  style-dxh358866cbf8fce77.css  style-dxh8c934658f5c238f.css  style-dxha78f93abce2bf41a.css
deploy/: db-access.sh  docker-compose.nginx.yml  docker-compose.yml  logs.sh  nginx-app.conf  nginx-sqlite.conf  start.sh  stop.sh  vps-nginx-site.conf
docs/: deploy-vps.md  docker-cmd.md  iteration-plan.md  overworld-pokemon-style.md
offlines/attack/Angmar/: Charge.json
offlines/attack/Angmar10PV/: Charge.json  suce moi ma poule.json
offlines/attack/Azrak Ombresang/: Briseur d'Égide.json  Chaînes de la Rage.json  Flèche de la Montagne du Destin.json  Fléau Sylvestre.json  Fracas des Abysses.json  Furie du Mordor.json  Lame Fusionnelle.json  Lame de Morgul.json  Malédiction d'Angmar.json  Récupération Mordorienne.json  Sculpture Élémentaire .json  SimpleAtk.json  test.json  Éclipse du Mordor.json
offlines/attack/Bulbasaur/: Charge.json  Leech Seed.json  Razor Leaf.json  Solar Beam.json  Synthesis.json  Vine Whip.json
offlines/attack/Gengar/: Charge.json  (+2 more)
offlines/characters/: Angmar.json  Angmar10PV.json  Azrak Ombresang.json  Bulbasaur.json  Charmander.json  Dragonite.json  Elara la guerisseuse de la Lorien.json  Gengar.json  Haunter.json  Machoke.json  Mankey.json  Mewtwo Armure.json  Mewtwo.json  Pidgey.json  Rattata.json  Squirtle.json  Thalia.json  Thraïn.json  test2.json
offlines/maps/: lotr_col_brumeux.json  lotr_foret_ancienne.json  lotr_foret_mordor.json  lotr_gorge_mordor.json  lotr_isengard.json  lotr_misty_mountains.json  lotr_mont_doom.json  lotr_moria.json  lotr_plaine_desespoir.json  lotr_plaines_rohan.json  lotr_shire.json  pallet_town.json  route_1.json
offlines/scenarios/: stage_1.json  stage_3.json  stage_4.json  stage_5.json
scripts/: bundle_app.sh  bundle_app_linux.sh  bundle_app_windows.sh  bundle_desktop.sh  bundle_mobile.sh  dev_android.sh  dev_desktop.sh  dev_emulator.sh  dev_web.sh  docker_build.sh  docker_compose_down.sh  docker_compose_up.sh  docker_run.sh  logs.sh  migrate_attack_jsons.py
src/: application.rs  character_page.rs  common.rs  core_game_data.rs  game_page.rs  global_resource.rs  i18n.rs  lib.rs  load_game_page.rs  main.rs  morphing_shape.rs  server_functions.rs
src/auth/: auth.rs  db.rs  server_fn.rs
src/auth_manager/: auth.rs  db.rs  mod.rs  model.rs  server_fn.rs
src/board_game_components/: admin_page.rs  admin_tab_attacks.rs  admin_tab_characters.rs  admin_tab_equipment.rs  admin_tab_scenarios.rs  admin_tab_users.rs  character_page.rs  character_select.rs  common_comp.rs  create_server_page.rs  game_sheets.rs  gameboard.rs  home_page.rs  joinongoinggame_page.rs  loadgame_page.rs  lobby_page.rs  login_page.rs  mod.rs  msg_from_client.rs  navbar.rs  overworld.rs  popover_comp.rs  startgame_page.rs
src/components/: character_page.rs  create_server_page.rs  gameboard.rs  home_page.rs  joinongoinggame_page.rs  loadgame_page.rs  lobby_page.rs  mod.rs  navbar.rs  startgame_page.rs
src/i18n/: en-US.ftl  fr-FR.ftl
src/utils/: mod.rs  pokemon_data_tests.rs  server_file_utils.rs
src/websocket_components/: app.rs  event.rs  game_state.rs  mod.rs  player_name.rs
src/websocket_handler/: common_event.rs  event.rs  event_inventory.rs  event_store.rs  event_talents.rs  game_state.rs  mod.rs  msg_from_client.rs  server_manager.rs
src/widgets/: alert_dialog.rs  charts.rs  mod.rs  tab.rs  tab_equipment.rs  tab_talents.rs
(+218 files in other folders)
