[package]
name = "dx-rpg"
version = "0.2.1"
authors = ["rondoudou"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.99"
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
lib-rpg = { git = "ssh://git@github.com/r0nd0ud0u/lib-rpg.git", rev = "6fa83c0928cc0967d8cb38318f8c10e2bcb062ac" }
serde = "1.0.228"
dioxus-desktop = { version = "0.7.2", optional = true }
dioxus-html = "0.7.2"
indexmap = "2.12.1"
tokio = "1.49.0"
colorgrad = "0.8.0"
once_cell = "1.21.3"
serde_json = "1.0.148"
web-time = "1.1.0"
async-std = "1.13.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
default = ["server"]
server = ["dioxus/server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
