[package]
name = "dx-rpg"
version = "0.3.0"
authors = ["rondoudou"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.99"
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
lib-rpg = { git = "https://github.com/r0nd0ud0u/lib-rpg.git", tag = "v1.2.0" }
serde = "1.0.228"
dioxus-desktop = { version = "0.7.2", optional = true }
dioxus-html = "0.7.2"
indexmap = "2.13.0"
tokio = "1.49.0"
colorgrad = "0.8.0"
once_cell = "1.21.3"
serde_json = "1.0.149"
web-time = "1.1.0"
async-std = "1.13.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
default = ["server"]
server = ["dioxus/server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
