[package]
name = "dx-rpg"
version = "0.3.0"
authors = ["rondoudou"]
edition = "2024"

# See more keys and their dexfinitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.99"
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
lib-rpg = { git = "https://github.com/r0nd0ud0u/lib-rpg.git", rev = "0a4b253d2b6471eb041a90b450fa62a7ffece3fd" }
serde = "1.0.228"
dioxus-desktop = { version = "0.7.3", optional = true }
dioxus-html = "0.7.3"
indexmap = "2.13.0"
tokio = { version = "1.49.0", features = ["full"], optional = true }
colorgrad = "0.8.0"
once_cell = "1.21.3"
serde_json = "1.0.149"
web-time = "1.1.0"
async-std = "1.13.2"
# dioxus 0.7 is using getrandom 0.3.3
getrandom = { version = "0.3.4", features = ["wasm_js"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "1443c71", default-features = false }

async-trait = { version = "0.1.88", optional = true }
sqlx = { version = "0.8.6", features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
axum = { version = "0.8.8", features = ["macros"], optional = true }
tower-http = { version = "0.6.8", features = ["auth"], optional = true }
http = { version = "1.4.0", optional = true }
tower = { version = "0.5.3", optional = true }
execute = "0.2.15"
dioxus-web = { version = "0.7.3", features = ["hydrate"], optional = true }
axum_session = { version = "0.17.1", optional = true }
axum_session_auth = { version = "0.17.0", optional = true }
axum_session_sqlx = { version = "0.6.1", features = ["sqlite"], optional = true }
bcrypt = {version = "0.18.0", optional = true }
rand = "0.9.2"
wasm-bindgen-futures = "0.4.58"
dioxus-sdk-storage = "0.7.0"

[features]
default = ["server"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:async-trait",
    "dep:sqlx",
    "dep:http",
    "dep:tower",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "bcrypt",
]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
